# Smart-Research-Assistant

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: __init__.py  api.py
app/frontend/: __init__.py  streamlit_app.py
app/modules/: __init__.py  challenge.py  document_loader.py  import os.py  qa.py  qa_new.py  summarizer.py  vector_store.py
app/utils/: __init__.py  config.py  llm_interface.py
vector_db/: index.faiss  index.pkl
