[project]
name = "smart-research-assistant"
version = "0.1.0"
description = "A smart document-aware assistant for research summarization and comprehension using Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.1",
    "langchain>=0.0.335",
    "langchain-google-genai>=0.0.3",
    "google-generativeai>=0.3.0",
    "langchain-huggingface>=0.0.2",
    "pypdf>=3.17.1",
    "pymupdf>=1.23.5",
    "pdfplumber>=0.10.2",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "chromadb>=0.4.18",
    "tiktoken>=0.5.1",
    "docx2txt>=0.8",
    "python-multipart>=0.0.6",
]
